# pynw

./: .gitignore  AGENTS.md  API.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  PR_REVIEW.md  README.md  REPORT.md  TODOS.md  lefthook.yml  pixi.toml  pyproject.toml  renovate.json
.github/workflows/: build.yml  check.yml  docs.yml  release.yml
docs/: USAGE.md
pynw/: __init__.py  __init__.pyi  _native.pyi  _needleman_wunsch.py  _ops.py
python/pynw/: __init__.py  _native.pyi  _ops.py
src/: lib.rs  nw.rs  nw2.rs  nw_core.rs  nw_merge_split.rs  utils.rs
tests/: conftest.py  helpers.py  test_alignment_indices.py  test_array_order.py  test_benchmark.py  test_edit_distance.py  test_edit_distance_hypothesis.py  test_examples.py  test_iter_alignment.py  test_needleman_wunsch.py  test_needleman_wunsch_api.py
